--- a/.github/workflows/manifest-e2e.yaml
+++ b/.github/workflows/manifest-e2e.yaml
@@ -57,8 +57,35 @@ jobs:
           run_matrix=$run_matrix"]}"
           echo "run_matrix=${run_matrix}" >> $GITHUB_OUTPUT
 
-  manifest-test:
+  mega-image-build:
     needs: job1
+    if: always() && ${{ needs.job1.outputs.run_matrix.include.length }} > 0
+    strategy:
+      matrix: ${{ fromJSON(needs.job1.outputs.run_matrix) }}
+    runs-on: docker-build
+    outputs:
+      image_tag: ${{ steps.build-megaservice-image.outputs.image_tag }}
+      image_repo: ${{ steps.build-megaservice-image.outputs.image_repo }}
+    steps:
+      - name: Checkout out Repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set variables
+        run: |
+          echo "IMAGE_REPO=$OPEA_IMAGE_REPO" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+
+      - name: Building MegaService Docker Image
+        id: build-megaservice-image
+        run: |
+          .github/workflows/scripts/build_push.sh ${{ matrix.example }}
+          echo "image_repo=${{ env.IMAGE_REPO }}" >> $GITHUB_OUTPUT
+          echo "image_tag=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+
+  manifest-test:
+    needs: [job1, mega-image-build]
     if: always() && ${{ needs.job1.outputs.run_matrix.include.length }} > 0
     strategy:
       matrix: ${{ fromJSON(needs.job1.outputs.run_matrix) }}
@@ -68,6 +95,7 @@ jobs:
       - name: E2e test manifest
         run: |
           echo "Matrix - manifest: ${{ matrix.example }}"
+          echo ${{needs.mega-image-build.outputs}}
 
       - name: Clean Up Working Directory
         run: sudo rm -rf ${{github.workspace}}/*
@@ -79,12 +107,16 @@ jobs:
 
       - name: Set variables
         run: |
+          echo ${{needs.mega-image-build.outputs.image_repo}}
+          echo ${{needs.mega-image-build.outputs.image_tag}}
+          echo "IMAGE_REPO=${{needs.mega-image-build.outputs.image_repo}}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${{needs.mega-image-build.outputs.image_tag}}" >> $GITHUB_ENV
           lower_example=$(echo "${{ matrix.example }}" | tr '[:upper:]' '[:lower:]')
           echo "NAMESPACE=$lower_example-$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
           echo "ROLLOUT_TIMEOUT_SECONDS=1800s" >> $GITHUB_ENV
           echo "KUBECTL_TIMEOUT_SECONDS=60s" >> $GITHUB_ENV
           echo "should_cleanup=false" >> $GITHUB_ENV
-          echo "skip_validate=false" >> $GITHUB_ENV
+          echo "skip_validate=true" >> $GITHUB_ENV
           echo "NAMESPACE=$NAMESPACE"
 
       - name: Initialize manifest testing
@@ -100,9 +132,9 @@ jobs:
           echo "Testing ${{ matrix.example }}, waiting for pod ready..."
           if kubectl rollout status deployment --namespace "$NAMESPACE" --timeout "$ROLLOUT_TIMEOUT_SECONDS"; then
             echo "Testing manifests ${{ matrix.example }}, waiting for pod ready done!"
+            echo "skip_validate=false" >> $GITHUB_ENV
           else
             echo "Timeout waiting for pods in namespace $NAMESPACE to be ready!"
-            echo "skip_validate=true" >> $GITHUB_ENV
             exit 1
           fi
           sleep 60
